force-app/main/default/objects/Holiday__c/Holiday__c.object-meta.xml
<CustomObject>
    <description>Company holiday calendar for field sales operations. Used by journey planning to exclude non-working days and by attendance module for holiday tracking.</description>
    <label>Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
        <required>true</required>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>