force-app/main/default/objects/Holiday__c/fields/Applicable_Region__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Region__c</fullName>
    <label>Applicable Region</label>
    <description>Region(s) where this holiday applies. Use 'All' for company-wide holidays. Comma-separated for multiple regions (e.g., 'East,North').</description>
    <type>Text</type>
    <length>255</length>
</CustomField>