force-app/main/default/objects/Holiday__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Holidays</relationshipLabel>
    <relationshipName>Holidays</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Territory from Territory Master where this holiday applies. Leave blank for all territories.</description>
</CustomField>