force-app/main/default/objects/Holiday__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>National Holiday</fullName><default>true</default><label>National Holiday</label></value>
            <value><fullName>Regional Holiday</fullName><default>false</default><label>Regional Holiday</label></value>
            <value><fullName>Optional Holiday</fullName><default>false</default><label>Optional Holiday</label></value>
            <value><fullName>Restricted Holiday</fullName><default>false</default><label>Restricted Holiday</label></value>
            <value><fullName>Company Holiday</fullName><default>false</default><label>Company Holiday</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>